<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.AddNoteFragment">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical"
       android:layout_margin="10dp">

       <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/inputTitle"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_margin="10dp"
           android:hint="@string/title">

           <com.google.android.material.textfield.TextInputEditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content" />

       </com.google.android.material.textfield.TextInputLayout>


       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal">

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/priority"
               android:textSize="20sp"
               android:layout_margin="10dp"
               android:textColor="@color/black"/>

           <RadioGroup
               android:id="@+id/priority"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal">

               <RadioButton android:id="@+id/radioHigh"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/high"/>

               <RadioButton android:id="@+id/radioMedium"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/medium"/>

               <RadioButton android:id="@+id/radioLow"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/low"/>
           </RadioGroup>

       </LinearLayout>

       <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/inputDesc"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_margin="10dp"
           android:hint="@string/inputDesc">

           <com.google.android.material.textfield.TextInputEditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               />

       </com.google.android.material.textfield.TextInputLayout>



   </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/saveNoteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_margin="25dp"
        android:layout_gravity="right|bottom"
        android:src="@drawable/save_note"
        tools:ignore="RtlHardcoded"
        android:contentDescription="@string/create_note_button" />

</FrameLayout>